src/test/deca/context/valid/provided/test_readfloat.deca
//test readfloat

{
    float y = 0.2;
    y = readFloat();
    println("readfloat fonctionne");
}